# attendence_repository

./: README.md  pubspec.yaml
attendance_backend/: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  mypy.ini  pyproject.toml  ruff.toml
attendance_backend/apps/attendance/: __init__.py  admin.py  apps.py  domain.py  exports.py  filters.py  models.py  serializers.py  services.py  signals.py  tasks.py  urls.py  views.py
attendance_backend/apps/core/: __init__.py  admin.py  models.py  pagination.py  permissions.py
attendance_backend/apps/core/utils/: __init__.py  excel.py  notifications.py  pdf.py  time.py
attendance_backend/apps/organization/: __init__.py  admin.py  apps.py  filters.py  models.py  serializers.py  signals.py  urls.py  views.py
attendance_backend/apps/reports/: __init__.py  apps.py  serializers.py  urls.py  views.py
attendance_backend/apps/users/: __init__.py  admin.py  apps.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
attendance_backend/attendance_backend/: asgi.py  celery.py  schema.py  settings.py  urls.py  wsgi.py
attendance_backend/scripts/: seed_demo.py
attendance_backend/tests/: conftest.py  test_auth.py  test_exports.py  test_policy_engine.py  test_requests_flow.py
attendance_backend/tests/factories/: __init__.py  attendance_factories.py  org_factories.py  user_factories.py
lib/: main.dart
linux/: CMakeLists.txt
test/: model_serialization_test.dart  offline_queue_service_test.dart  policy_engine_test.dart  widget_test.dart
web/: index.html  manifest.json
(+103 files in other folders)
